objects/fcio1__Scheduler__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Error_Comments__c</fullName>
        <label>Comments(If any)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__ExecutePolicy__c</fullName>
        <label>ExecutePolicy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HoldoutPolicy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Filter_Field_Value__c</fullName>
        <inlineHelpText>Filter Field&apos;s expected value</inlineHelpText>
        <label>Filter Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Filter_Field__c</fullName>
        <inlineHelpText>Filter Criteria - Object&apos;s Field API name. [Limited To - Checkbox, Currency, Date [MM/DD/YYYY], DateTime[MM/DD/YYYY HH:MM AM/PM],Date / DateTime [Last_N_Days: &quot;number of days&quot;], Number, Email, Percent, Picklist, Text, URL type fields].</inlineHelpText>
        <label>Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Filter_Operator__c</fullName>
        <label>Do not use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Frequency__c</fullName>
        <label>Frequency (minutes)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Last_Execution_Completed_At__c</fullName>
        <label>Last Execution Completed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Last_Execution_Started_At__c</fullName>
        <label>Last Execution Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Last_Run_Duration_minutes__c</fullName>
        <formula>IF(NOT( ISNULL( fcio1__Last_Execution_Started_At__c ) &amp;&amp; ISNULL( fcio1__Last_Execution_Completed_At__c ) ) &amp;&amp; ( fcio1__Last_Execution_Started_At__c &lt;= fcio1__Last_Execution_Completed_At__c ), (( fcio1__Last_Execution_Completed_At__c - fcio1__Last_Execution_Started_At__c) * 1440 ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Run Duration(minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Last_Run_Status__c</fullName>
        <label>Last Run Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Operator__c</fullName>
        <label>Field Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fcio1__Operator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Spark_Field_Value__c</fullName>
        <label>Spark Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Spark_Field__c</fullName>
        <label>Spark Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Fullcast Job</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>